added more balancers and the ability to choose one